# cariboulite

examples/: Makefile  rx.c  tx.c  tx_rx.c
examples/cpp/: CMakeLists.txt  dump870.cpp
firmware/: Makefile  afifo.v  io.pcf  lvds_rx.v  lvds_tx.v  rx_framer.v  simple_fifo.v  smi_ctrl.v  sys_ctrl.v  top.v  tx_deframer.v
software/kernel/dev/: CMakeLists.txt  bcm2835_smi.c  bcm2835_smi.h  dmaengine.h
software/kernel/stream/: Makefile  main.c  smi_kernel.h
software/libcariboulite/: CMakeLists.txt  shibu.h
software/libcariboulite/src/: cariboulite_radios.c  cariboulite_radios.h  cariboulite_setup.c  cariboulite_setup.h
software/libcariboulite/src/at86rf215/: CMakeLists.txt  at86rf215.c  at86rf215_events.c
software/libcariboulite/src/caribou_fpga/: CMakeLists.txt  caribou_fpga.c  caribou_fpga.h  test_caribou_fpga.c
software/libcariboulite/src/caribou_smi/: caribou_smi.c  caribou_smi_modules.c  test_caribou_smi.c
software/libcariboulite/src/cariboulite_config/: CMakeLists.txt  cariboulite_config.h  cariboulite_config_default.h
software/libcariboulite/src/cariboulite_eeprom/: CMakeLists.txt
software/libcariboulite/src/io_utils/: CMakeLists.txt
software/libcariboulite/src/io_utils/pigpio/: pigpio.h
software/libcariboulite/src/soapy_api/: Cariboulite.cpp  Cariboulite.hpp  CaribouliteSession.cpp  CaribouliteStream.cpp  SoapyCariboulite.cpp
